# ACOC

./: .gitignore  README.md  __init__.py  analyse_critique_ia_dynamique.md  components.py  demo.py  managers.py  model.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_tests.py  setup.py  structures.py  trainer.py  variants.py
config/: __init__.py
core/: __init__.py  expert.py  router.py
management/: __init__.py  penalty.py
monitoring/: activation.py  gradient.py
scripts/: base_trainer.py  demo.py  inference.py  quick_test.py  train_cifar10.py  train_cifar100.py  train_continual.py  train_fashion.py  train_imdb.py  train_mnist.py  train_speech_commands.py
src/acoc/: __init__.py
src/acoc/config/: config.py  structures.py
src/acoc/core/: __init__.py  projections.py  router.py
src/acoc/experts/: __init__.py  base.py  block.py  cnn.py  factory.py  mlp.py
src/acoc/management/: expansion.py  penalty.py  pruning.py  replay.py  warmup.py
src/acoc/model/: __init__.py  acoc.py
src/acoc/monitoring/: __init__.py  activation.py  gradient.py
src/acoc/training/: __init__.py  continual.py  trainer.py
src/acoc/utils/: logger.py
src/acoc/variants/: __init__.py  system.py
tests/: test_config.py  test_continual.py  test_expansion.py  test_experts.py  test_integration.py  test_logger.py  test_management.py  test_model.py  test_monitoring.py  test_multimodal_replay.py  test_router.py  test_router_specialization.py  test_trainer.py  test_variants.py
utils/: __init__.py
variants/: system.py
